Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 
 <ul>
 <li>CTS URNs</li>
-<li>Canon Text Services protocol</li>
+<li>Canonical Text Services protocol</li>
 </ul>
 </li>
 <li>code libraries for working with CITE repositories
