--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>The CITE architecture on github by cite-architecture</title>
+    <title>The CITE architecture by cite-architecture</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,8 +17,8 @@
   <body>
 
       <header>
-        <h1>The CITE architecture on github</h1>
-        <p>Github web page for the CITE architecture</p>
+        <h1>The CITE architecture</h1>
+        <p>Guide to github repositories</p>
       </header>
 
       <div id="banner">
