Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -41,33 +41,42 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <li>specifications
 
 <ul>
-<li>CTS URNs</li>
-<li>Canonical Text Services protocol</li>
+<li><a href="https://github.com/cite-architecture/ctsurn_spec">CTS URNs</a></li>
+<li><a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a></li>
 </ul>
 </li>
 <li>code libraries for working with CITE repositories
 
 <ul>
-<li>hocuspocus</li>
-<li>prestochango</li>
-<li>nysi</li>
-<li>abracadabra</li>
+<li><a href="https://github.com/cite-architecture/hocuspocus">hocuspocus</a></li>
+<li><a href="https://github.com/cite-architecture/prestochango">prestochango</a></li>
+<li><a href="https://github.com/cite-architecture/nysi">nysi</a></li>
+<li><a href="https://github.com/cite-architecture/abracadabra">abracadabra</a></li>
 </ul>
 </li>
 <li>implementations of the CITE service suite
 
 <ul>
-<li>sparqlcts</li>
-<li>sparqlcc</li>
-<li>sparqlimg</li>
-<li>citegraph</li>
+<li><a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a></li>
+<li><a href="https://github.com/cite-architecture/sparqlcc">sparqlcc</a></li>
+<li><a href="https://github.com/cite-architecture/sparqlimg">sparqlimg</a></li>
+<li><a href="https://github.com/cite-architecture/citegraph">citegraph</a></li>
 </ul>
 </li>
 <li>tools for managing and integrating CITE repositories
 
 <ul>
-<li>citemgr</li>
-<li>citeservlet</li>
+<li><a href="https://github.com/cite-architecture/citemgr">citemgr</a></li>
+<li><a href="https://github.com/cite-architecture/citeservlet">citeservlet</a></li>
+</ul>
+</li>
+<li>utilities
+
+<ul>
+<li>
+<a href="https://github.com/cite-architecture/cite">cite</a>, a library for working with URNs and TextInventories</li>
+<li>
+<a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a>, a harness for running a suite of tests against a CTS installation</li>
 </ul>
 </li>
 </ul>
