Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Christopher Blackwell and Neel Smith originally developed the CITE architecture to meet the 
 needs of the <a href="http://homermultitext.github.io/">Homer Multitext project</a>.</p>
 
-<p>Public repositories on github include:</p>
+<p>Public repositories for our CITE architecture on github include:</p>
 
 <ul>
 <li>specifications
