Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -48,26 +48,36 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <li>code libraries for working with CITE repositories
 
 <ul>
-<li><a href="https://github.com/cite-architecture/hocuspocus">hocuspocus</a></li>
-<li><a href="https://github.com/cite-architecture/prestochango">prestochango</a></li>
-<li><a href="https://github.com/cite-architecture/nysi">nysi</a></li>
-<li><a href="https://github.com/cite-architecture/abracadabra">abracadabra</a></li>
+<li>
+<a href="https://github.com/cite-architecture/hocuspocus">hocuspocus</a> for working with a text repository</li>
+<li>
+<a href="https://github.com/cite-architecture/prestochango">prestochango</a> for working a repository of structured collections</li>
+<li>
+<a href="https://github.com/cite-architecture/nysi">nysi</a> for working with an image repository</li>
+<li>
+<a href="https://github.com/cite-architecture/abracadabra">abracadabra</a> for working with CITE graphs</li>
 </ul>
 </li>
 <li>implementations of the CITE service suite
 
 <ul>
-<li><a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a></li>
-<li><a href="https://github.com/cite-architecture/sparqlcc">sparqlcc</a></li>
-<li><a href="https://github.com/cite-architecture/sparqlimg">sparqlimg</a></li>
-<li><a href="https://github.com/cite-architecture/citegraph">citegraph</a></li>
+<li>
+<a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a>:  the Canonical Text Services</li>
+<li>
+<a href="https://github.com/cite-architecture/sparqlcc">sparqlcc</a>:  the CITE Collection Services</li>
+<li>
+<a href="https://github.com/cite-architecture/sparqlimg">sparqlimg</a>: the CITE Image Services</li>
+<li>
+<a href="https://github.com/cite-architecture/citegraph">citegraph</a>: a CITE graph service</li>
 </ul>
 </li>
 <li>tools for managing and integrating CITE repositories
 
 <ul>
-<li><a href="https://github.com/cite-architecture/citemgr">citemgr</a></li>
-<li><a href="https://github.com/cite-architecture/citeservlet">citeservlet</a></li>
+<li>
+<a href="https://github.com/cite-architecture/citemgr">citemgr</a>: utilities for working with CITE repositories, including generating RDF representations of repositories</li>
+<li>
+<a href="https://github.com/cite-architecture/citeservlet">citeservlet</a>:  a servlet providing all four of the CITE services</li>
 </ul>
 </li>
 <li>utilities
