Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>The CITE architecture by cite-architecture</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="The CITE architecture : Guide to github repositories" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>The CITE architecture</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>The CITE architecture</h1>
-        <p>Guide to github repositories</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cite-architecture">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">The CITE architecture</h1>
+          <h2 id="project_tagline">Guide to github repositories</h2>
 
-        <a href="https://github.com/cite-architecture" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p>Christopher Blackwell and Neel Smith originally developed the CITE architecture to meet the 
 needs of the <a href="http://homermultitext.github.io/">Homer Multitext project</a>.</p>
+
+<h2>
+<a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h2>
+
+<ul>
+<li>Version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>, and the parallel version of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</li>
+</ul><h2>
+<a name="overview-of-repositories" class="anchor" href="#overview-of-repositories"><span class="octicon octicon-link"></span></a>Overview of repositories</h2>
 
 <p>Public repositories for our CITE architecture on github include:</p>
 
@@ -91,11 +94,16 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 </li>
 </ul>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
