Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h2>
 
 <ul>
-<li>Version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>, and the parallel version of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</li>
+<li>Version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>, and the parallel version 1.1 of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</li>
 </ul><h2>
 <a name="overview-of-repositories" class="anchor" href="#overview-of-repositories"><span class="octicon octicon-link"></span></a>Overview of repositories</h2>
 
