--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 
 <p>Public repositories for our CITE architecture on github include:</p>
 
-<ul>
-<li>specifications
+<h3>
+<a name="specifications" class="anchor" href="#specifications"><span class="octicon octicon-link"></span></a>Specifications</h3>
 
 <ul>
 <li><a href="https://github.com/cite-architecture/ctsurn_spec">CTS URNs</a></li>
 <li><a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a></li>
-</ul>
-</li>
-<li>code libraries for working with CITE repositories
+</ul><h3>
+<a name="code-libraries-for-working-with-cite-repositories" class="anchor" href="#code-libraries-for-working-with-cite-repositories"><span class="octicon octicon-link"></span></a>Code libraries for working with CITE repositories</h3>
 
 <ul>
 <li>
@@ -64,9 +63,8 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <a href="https://github.com/cite-architecture/nysi">nysi</a> for working with an image repository</li>
 <li>
 <a href="https://github.com/cite-architecture/abracadabra">abracadabra</a> for working with CITE graphs</li>
-</ul>
-</li>
-<li>implementations of the CITE service suite
+</ul><h3>
+<a name="implementations-of-the-cite-service-suite" class="anchor" href="#implementations-of-the-cite-service-suite"><span class="octicon octicon-link"></span></a>Implementations of the CITE service suite</h3>
 
 <ul>
 <li>
@@ -77,26 +75,22 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <a href="https://github.com/cite-architecture/sparqlimg">sparqlimg</a>: the CITE Image Services</li>
 <li>
 <a href="https://github.com/cite-architecture/citegraph">citegraph</a>: a CITE graph service</li>
-</ul>
-</li>
-<li>tools for managing and integrating CITE repositories
+</ul><h3>
+<a name="tools-for-managing-and-integrating-cite-repositories" class="anchor" href="#tools-for-managing-and-integrating-cite-repositories"><span class="octicon octicon-link"></span></a>Tools for managing and integrating CITE repositories</h3>
 
 <ul>
 <li>
 <a href="https://github.com/cite-architecture/citemgr">citemgr</a>: utilities for working with CITE repositories, including generating RDF representations of repositories</li>
 <li>
 <a href="https://github.com/cite-architecture/citeservlet">citeservlet</a>:  a servlet providing all four of the CITE services</li>
-</ul>
-</li>
-<li>utilities
+</ul><h3>
+<a name="utilities" class="anchor" href="#utilities"><span class="octicon octicon-link"></span></a>Utilities</h3>
 
 <ul>
 <li>
 <a href="https://github.com/cite-architecture/cite">cite</a>, a library for working with URNs and TextInventories</li>
 <li>
 <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a>, a harness for running a suite of tests against a CTS installation</li>
-</ul>
-</li>
 </ul>
       </section>
       <footer>
