Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h2>
 
 <ul>
-<li>Apr. 7, 2014: <strong>version 1.3 of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</strong> released (testing version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>)</li>
+<li>Apr. 10, 2014: <strong>version 1.4 of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</strong> released (testing version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>): improved XML comparison of expected and actual replies.</li>
 </ul><h2>
 <a name="overview-of-repositories" class="anchor" href="#overview-of-repositories"><span class="octicon octicon-link"></span></a>Overview of repositories</h2>
 
