Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <h1>
 <a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h1>
 
+<p><strong>April 11, 2014</strong>:  two parallel releases:</p>
+
 <ul>
-<li>Apr. 10, 2014: <strong>version 1.5 of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</strong> released (testing version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>): improved XML comparison of expected and actual replies,
-corrections to GetPassagePlus reply to conform with 5.0 schema candidate.</li>
+<li>
+<strong>Version 1.6 of the <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a> servlet</strong> released (testing version 5.0.rc.2 of the <a href="https://github.com/cite-architecture/cts_spec">Canonical Text Services protocol</a>): corrects two typographic errors in expected reply values.</li>
+<li>
+<strong>Version 0.9.0 of <a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a></strong>, an implementation
+of the CTS protocol using a SPARQL endpoint for data access:  version 0.9.0 passes 100% of the tests in version 1.6 of <code>ctsvalidator</code>.</li>
 </ul><h1>
 <a name="overview-of-repositories" class="anchor" href="#overview-of-repositories"><span class="octicon octicon-link"></span></a>Overview of repositories</h1>
 
