Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <li>
 <strong>Version 0.9.0 of <a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a></strong>, an implementation
 of the CTS protocol using a SPARQL endpoint for data access:  version 0.9.0 passes 100% of the tests in version 1.6 of <code>ctsvalidator</code>.</li>
-</ul><h1>
+</ul><p>With <code>ctsvalidator</code> and <code>sparqlcts</code> in sync with each other for version 5.0.rc.2 of the CTS protocol, we are now resuming review of a final release candidate for CTS 5.0.</p>
+
+<h1>
 <a name="overview-of-repositories" class="anchor" href="#overview-of-repositories"><span class="octicon octicon-link"></span></a>Overview of repositories</h1>
 
 <p>Public repositories for our CITE architecture on github include:</p>
