Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ needs of the <a href="http://homermultitext.github.io/">Homer Multitext project<
 <h1>
 <a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h1>
 
+<p><strong>April 13, 2014</strong>: version 9.2.0 of <a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a>
+offers greatly improved performance on some categories of complex queries spanning different depths of citation hierarchies.</p>
+
 <p><strong>April 11, 2014</strong>:  two parallel releases:</p>
 
 <ul>
