Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 needs of the <a href="http://homermultitext.github.io/">Homer Multitext project</a>.</p>
 
 <h1>
-<a name="recent-additions" class="anchor" href="#recent-additions"><span class="octicon octicon-link"></span></a>Recent additions</h1>
+<a name="recent-releases" class="anchor" href="#recent-releases"><span class="octicon octicon-link"></span></a>Recent releases</h1>
 
 <p><strong>April 13, 2014</strong>: version 9.2.0 of <a href="https://github.com/cite-architecture/sparqlcts">sparqlcts</a>
 offers greatly improved performance on some categories of complex queries spanning different depths of citation hierarchies.</p>
