Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@ of the CTS protocol using a SPARQL endpoint for data access:  version 0.9.0 pass
 <li>
 <a href="https://github.com/cite-architecture/citeservlet">citeservlet</a>:  a servlet providing all four of the CITE services</li>
 </ul><h2>
-<a name="utilities" class="anchor" href="#utilities"><span class="octicon octicon-link"></span></a>Utilities</h2>
+<a name="other-utilities" class="anchor" href="#other-utilities"><span class="octicon octicon-link"></span></a>Other utilities</h2>
 
 <ul>
 <li>
-<a href="https://github.com/cite-architecture/cite">cite</a>, a library for working with URNs and TextInventories</li>
+<a href="https://github.com/cite-architecture/cite">cite</a>, a JVM library for working with URNs and TextInventories</li>
 <li>
 <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a>, a harness for running a suite of tests against a CTS installation</li>
 </ul>
