--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="The CITE architecture : Guide to github repositories" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>The CITE architecture by cite-architecture</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>The CITE architecture</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cite-architecture">View on GitHub</a>
+      <header>
+        <h1>The CITE architecture</h1>
+        <p>Guide to github repositories</p>
+      </header>
 
-          <h1 id="project_title">The CITE architecture</h1>
-          <h2 id="project_tagline">Guide to github repositories</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-        </header>
-    </div>
+        <a href="https://github.com/cite-architecture" class="button fork"><strong>View On GitHub</strong></a>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <p>Christopher Blackwell and Neel Smith originally developed the CITE architecture to meet the 
 needs of the <a href="http://homermultitext.github.io/">Homer Multitext project</a>.</p>
 
@@ -102,16 +107,11 @@ of the CTS protocol using a SPARQL endpoint for data access:  version 0.9.0 pass
 <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a>, a harness for running a suite of tests against a CTS installation</li>
 </ul>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
