Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ of the CTS protocol using a SPARQL endpoint for data access:  version 0.9.0 pass
 <a href="https://github.com/cite-architecture/cite">cite</a>, a JVM library for working with URNs and TextInventories</li>
 <li>
 <a href="https://github.com/cite-architecture/ctsvalidator">ctsvalidator</a>, a harness for running a suite of tests against a CTS installation</li>
+<li>
+<a href="https://github.com/cite-architecture/citedownmgr">citedownmgr</a>, a gradle build system for converting
+texts in citedown notation (markdown extended with URN references) to generic markdown</li>
 </ul>
       </section>
       <footer>
